<resources>
    <string name="app_name">Piralcoobot</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="play_fragment_label">Play Fragment</string>
    <string name="game_fragment_label">Game Fragment</string>
    <string name="menu">Menu</string>
    <string name="action_play">Jouer</string>
    <string name="action_settings">Options</string>
    <string name="action_help">Aide</string>
    <string name="add">Ajouter</string>

    <!-- Strings used for content descriptions -->
    <string name="pirate">Pirate</string>
    <string name="mousse">Mousse</string>
    <string name="guest">Guest</string>
    <string name="pirateList">PirateList</string>
    <string name="mousseList">MousseList</string>
    <string name="guestList">GuestList</string>

    <!-- Strings used for data file names -->
    <string name="playerTypeDataFile">playerTypeData</string>
    <string name="ruleSetDataFile">ruleSetData</string>
</resources>