<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.kruk.piralcoobot.Home"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/home_page">

        <action
            android:id="@+id/action_homeFragment_to_playFragment"
            app:destination="@id/playFragment" />
    </fragment>
    <fragment
        android:id="@+id/playFragment"
        android:name="com.kruk.piralcoobot.Play"
        android:label="@string/play_fragment_label"
        tools:layout="@layout/play_page">

        <action
            android:id="@+id/action_playFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_playFragment_to_gameFragment"
            app:destination="@id/action_gameFragment_to_homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/action_gameFragment_to_homeFragment"
        android:name="com.kruk.piralcoobot.Game"
        android:label="@string/game_fragment_label">
        <action
            android:id="@+id/action_gameFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_gameFragment_to_homeFragment_self"
            app:destination="@id/action_gameFragment_to_homeFragment" />
    </fragment>
</navigation>