<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@color/pirateSecondary"
        android:text="@string/action_play"
        android:textColor="@color/buttonTextColor"
        android:textSize="25sp"
        android:paddingLeft="50dp"
        app:layout_constraintBottom_toTopOf="@id/button_third"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />

    <Button
        android:id="@+id/button_third"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@color/pirateSecondary"
        android:text="@string/action_settings"
        android:textColor="@color/buttonTextColor"
        android:textSize="25sp"
        android:paddingLeft="50dp"
        app:layout_constraintBottom_toTopOf="@id/button_fourth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_first" />

    <Button
        android:id="@+id/button_fourth"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@color/pirateSecondary"
        android:text="@string/action_help"
        android:textColor="@color/buttonTextColor"
        android:textSize="25sp"
        android:paddingLeft="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_third" />
</androidx.constraintlayout.widget.ConstraintLayout>